--- a/_posts/2013-07-13-weibo.md
+++ b/_posts/2013-07-13-weibo.md
@@ -13,6 +13,6 @@ title: 为什么停用微博
 
 网络上貌似有很多这样的人，越是让他瞧不起的人，越是不开心的话题，越是让他们“关注”和兴奋。仿佛他们来到这个世界上就是为了寻找那些东西。在很早的时候，我偶尔还去 MITBBS 或者 #Java IRC 聊天室。后来发现每一次上去讨论，几乎没有一次不是扫兴而归。能够把问问题的人看成是菜鸟或者白痴，是他们最开心的事情。“去看了文档再来问问题！”这就是他们喜欢说的话。他们没有想到的是，我问那些问题的目的，往往是为了了解某些语言的设计给程序员带来了怎样的麻烦。然而当我问出这种专家级问题的时候，每次都被当成菜鸟：“这点规则都记不住！”能够成为一种语言的“熟练工”，能够记住如何绕过它所有的设计错误，显然是让他们非常自豪的事情。所以我这种“不耻下问”的友好举动，总是得到“大智若愚”的后果。
 
-我可以避免这种无意义的讨论，我可以不去 MITBBS，不上 #Java 聊天室，然而我却无法让这类人不“关注”我的微博。短短的一句话里面，就可以有好几个带有“暴力”的词汇。这些词汇足以把任何理性的，技术性的讨论转化为一次宗教冲突。
+我可以避免这种无意义的讨论，我可以不去 MITBBS，不上 #Java 聊天室，然而我却无法让这类人不“关注”我的微博。短短的一句话里面就可以有好几个带有“暴力”的词汇，这些词汇足以把任何理性的，技术性的讨论转化为一次人身攻击。
 
-我无法控制这样的人的言论，我也无法防止他们“关注”我的微博，所以我只好不再使用微博。只有关闭这种不良的信息通道，才能让我专注于最好的想法和心情。这也许就是为什么 Knuth 不再使用 email 的原因吧。实际上我最好的几个朋友，几乎全都不用微博和 FB 的。所以如果你想知道我真实的见解，那就只好静静的等待我更新这个没有评论功能的博客。
+我无法控制这样的人的言论，我也无法防止他们“关注”我的微博，所以我只好不再使用微博。只有关闭这种不良的信息通道，才能让我专注于最好的想法和心情。这也许就是为什么 Knuth 不再使用 email 的原因吧。实际上我最好的几个朋友，几乎全都不用微博和 FB 的。所以如果你想知道我真实的见解，就只好静静的等待我更新这个没有评论功能的博客。
